--- a/README
+++ b/README
@@ -1,1 +1,67 @@
 Basis provides a set of classes for easily plotting and transforming arbitrary 2D coordinate systems by specifying their basis vectors in Ruby-Processing.
+
+## Installation
+
+To install the Basis gem, first head to the location where the jruby-complete.jar is located, for Ruby-Processing. There, do this:
+
+    java -jar jruby-complete.jar -S gem install basis-processing --user-install
+
+Alternatively, if you're using a conventional JRuby installation, do this:
+
+    sudo jruby -S gem install basis-processing
+
+To use Basis functionality in your code, it is enough to:
+
+    require 'basis_processing'
+
+## Example Code
+
+Here's some example code, which plots random points.
+
+    require 'rubygems'`
+    require 'basis_processing'`
+
+    class Demo < Processing::App
+    app = self
+    def setup
+        smooth
+        background(0,0,0)
+        color_mode(RGB, 1.0)
+ 
+        points = []
+        100.times {points << {:x => random(200), :y => random(300)}}
+ 
+        x_basis_vector = {:x => 1.0, :y => 0.0}
+        y_basis_vector = {:x => 0.0, :y => 1.0}
+ 
+        x_range = ContinuousRange.new({:minimum => 0, :maximum => 200})
+        y_range = ContinuousRange.new({:minimum => 0, :maximum => 300})
+ 
+        basis = CoordinateSystem.new(Axis.new(x_basis_vector,x_range), Axis.new(y_basis_vector,y_range), [[4,0],[0,2]], self)
+        screen_transform = SignedTransform.new({:x => 1, :y => -1}, {:x => 300, :y => 900})
+        screen = Screen.new(screen_transform, self)
+        screen.draw_axes(basis,10,10)
+        stroke(1,1,0,1)
+        fill(1,1,0)
+        rect_mode(CENTER)
+        points.each do |p|
+                screen.plot(p, basis, :bar => true) {|p| rect(p[:x], p[:y], 5, 5)}
+        end
+    end
+ 
+    def draw
+    end
+    end
+ 
+    w = 1200
+    h = 1000
+ 
+    Demo.new(:title => "My Sketch", :width => w, :height => h)
+
+You have a few options when plotting a point. Consider the line:
+
+	screen.plot(p, basis, :bar => true) {|p| rect(p[:x], p[:y], 5, 5)}
+
+If you omit `:bar => true` or don't specify any options, Basis will plot the points without connecting them to the X-axis.
+If you omit the block at the end of the call, Basis will plot the point using a circle. Use the block to customise how you wish to represent the point graphically.
+
